--- a/get/src/styles/login.css
+++ b/get/src/styles/login.css
@@ -1,19 +1,29 @@
 .container{
     height: 100vh;
-    background-color: black;
     width: 100%;
 }
 
 .loginFormContainer{
     height: 100%;
     display: grid;
-    grid-template-columns: 55% 45%;
+    grid-template-columns: 60% 40%;
+}
+
+.loginForm>.form{
+    height: 50%;
+    width: 50%;
+    background-color: #ffffff;
+    margin-left: 25%;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) ;
+    padding: 20px;
 }
 
 .loginForm{
-    background-color: antiquewhite;
-}
+    background-color: rgba(24, 92, 205, 0.31);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 
-.loginImage{
-    background-color: aqua;
 }
