--- a/get/src/styles/login.css
+++ b/get/src/styles/login.css
@@ -13,7 +13,7 @@
     height: 50%;
     width: 50%;
     background-color: #ffffff;
-    margin-left: 25%;
+    margin: auto;
     text-align: center;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) ;
