--- a/get/src/styles/signup.css
+++ b/get/src/styles/signup.css
@@ -6,15 +6,15 @@
 .signupFormContainer{
     height: 100%;
     display: grid;
-    grid-template-columns: 60% 40%;
+    grid-template-columns: 50% 50%;
 }
 
 .signupForm>.form{
     height: 70%;
     width: 50%;
     background-color: #ffffff;
-    margin-left: 25%;
     text-align: center;
+    margin: auto;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) ;
     padding: 20px;
@@ -25,4 +25,9 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+}
+
+.signupImage>img{
+    width: 100%;
+    height: 100%;
 }
