--- a/get/src/styles/signup.css
+++ b/get/src/styles/signup.css
@@ -6,7 +6,7 @@
 .signupFormContainer{
     height: 100%;
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 60% 40%;
 }
 
 .signupForm>.form{
@@ -27,7 +27,13 @@
     flex-direction: column;
 }
 
+.signupImage{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .signupImage>img{
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 60%;
 }
