--- a/get/src/styles/login.css
+++ b/get/src/styles/login.css
@@ -1,6 +1,7 @@
 .container{
     height: 100vh;
     width: 100%;
+    background-color: black;
 }
 
 .loginFormContainer{
@@ -12,16 +13,20 @@
 .loginForm>.form{
     height: 50%;
     width: 50%;
-    background-color: #ffffff;
+    background-color: black;
     margin: auto;
     text-align: center;
     border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) ;
+    box-shadow: 0 4px 8px 0 rgba(249, 246, 246, 0.2), 0 6px 20px 0 rgba(250, 247, 247, 0.19) ;
     padding: 20px;
 }
 
+form>h1{
+    color: aliceblue;
+    text-shadow: 0 0 3px #f6b9b9, 0 0 5px #a1a1d4;
+}
+
 .loginForm{
-    background-color: rgba(24, 92, 205, 0.31);
     display: flex;
     justify-content: center;
     flex-direction: column;
