--- a/get/src/styles/landing.css
+++ b/get/src/styles/landing.css
@@ -3,9 +3,34 @@
     width: 100%;
 }
 
-.contents{
+.landingContainer{
     height: 100%;
     display: grid;
     grid-template-rows: 15% 80%;
+    gap: 5%;
 }
+
+.logoImage{
+    height: 100%;
+    width: 50%;
+}
+
+.logoImage>img{
+    height: 70%;
+}
+
+.description{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.description_card{
+    height: 80%;
+    width: 50%;
+    margin-top: 10px;
+    margin-right: 10px;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px 0 rgba(249, 246, 246, 0.2), 0 6px 20px 0 rgba(250, 247, 247, 0.19) ;
+}
+
 
