--- a/get/src/styles/landing.css
+++ b/get/src/styles/landing.css
@@ -26,18 +26,25 @@
 
 .description_card{
     height: 95%;
-    width: 50%;
+    width: 40%;
     margin-top: 10px;
     margin-right: 10px;
     border-radius: 20px;
-    box-shadow: 0 4px 8px 0 rgba(249, 246, 246, 0.2), 0 6px 20px 0 rgba(250, 247, 247, 0.19) ;
 }
 
-.description_container{
-    display: grid;
-    grid-template-rows: 60% 40%;
-    border-radius: 9px;
-    background-color: white;
+.description_card>h5{
+    color: aliceblue;
+    text-align: center;
+    font-size: 1.25rem;
+    padding: 8px;
+    letter-spacing: 1px;
+}
+
+.description_card>.explore{
+    text-align: center;
+}
+.description_card>.explore>button{
+    width: 120px;
 }
 
 
