--- a/get/src/styles/landing.css
+++ b/get/src/styles/landing.css
@@ -33,7 +33,7 @@
 }
 
 .description_card>h5{
-    color: aliceblue;
+    color: #61DAFB;
     text-align: center;
     font-size: 1.25rem;
     padding: 8px;
