--- a/get/src/styles/login.css
+++ b/get/src/styles/login.css
@@ -20,8 +20,7 @@
 }
 
 form>h1{
-    color: aliceblue;
-    text-shadow: 0 0 3px #f6b9b9, 0 0 5px #a1a1d4;
+    color:#61DAFB;
     padding: 5px;
     font-size: 25px;
 }
