--- a/get/src/index.css
+++ b/get/src/index.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  background-color: black;
+  background-color: #282D35;
 }
 
 
